# manifold-mor-wave

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/register/trial_manifold/bump_ae_0(loss_weight_data:0.9,red_dim:10,shift:initial_value)/cached_results/: _compute_manifold.pkl  _get_rng_states.pkl
experiments/register/trial_manifold/bump_ae_1(red_dim:10)/cached_results/: _compute_manifold.pkl  (+1 more)
src/manifold_mor/: context.py
src/manifold_mor/chart/: auto_encoder.py  auto_encoder_conv1d.py  basic.py  identity.py  iterative_callbacks.py  linear.py  symplectic_linear.py  torch_losses.py  torch_modules.py
src/manifold_mor/experiments/: basic.py  caching.py  model.py  model_reduction.py  trial_manifold.py
src/manifold_mor/fields/: covector.py  metric.py  symplectic.py  tensor.py  vector.py  vector_reduced.py
src/manifold_mor/models/: basic.py  burgers_implicit.py  hamiltonian.py  shifted.py
src/manifold_mor/mor/: metrics.py  mor_pipeline.py  mor_pipeline_ingredients.py  plots.py  reduced_model.py  snapshots.py
src/manifold_mor/time_steppers/: basic.py  covector.py  hamiltonian.py  linearization.py  residual.py  solvers.py  vector.py
src/manifold_mor/trial_manifold/: basic.py  component.py
src/manifold_mor/utils/: conv1d_ae_factory.py  logging.py
src/manifold_mor_demos/hamiltonian_wave/: generate_plots_for_paper_from_bump_online.py  main_online_phase_paper.py  manifold_experiments.py  model_experiments.py  reduction_experiments.py  repickle_trial_manifolds.py
src/structured_nn/: basic.py  invertable.py
src/structured_nn/utils/: loss.py
(+86 files in other folders)
